# Exambro_Automation

./: .gitignore  Appflow.md  Backend_Schema.md  ExamBro_How_Topics_Are_Decided.md  ExamBro_Kimi_K2.6_Integration.md  ExamBro_Open_Questions.md  ExamBro_Work_Plan.md  Gap_Analysis.md  Implementation_Plan.md  Meta_Instagram_API_Setup.md  PRD.md  README.md  SETUP.md  TRD.md  UI_UX_Design.md
backend/: .env.example  .gitignore  apply_migration.py  pyproject.toml  run_migration.py
backend/app/: config.py  db.py  main.py  schemas.py
backend/app/agents/: competitor_fetcher.py  context.py  critic.py  exam_calendar_fetcher.py  format_decider.py  image_maker.py  llm.py  news_search.py  performance_fetcher.py  reel_scripter.py  topic_decider.py  writer.py
backend/app/api/: calibration.py  deps.py  ideas.py  posts.py  queue.py  settings.py  topics.py  trigger.py
backend/app/pipeline/: orchestrator.py
backend/app/services/: email.py  instagram.py  scheduler.py
backend/tests/: test_smoke.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/src/: App.tsx  index.css  types.ts
supabase/migrations/: 0001_initial_schema.sql  0002_add_brand_settings.sql  0002_calibration_hashtags.sql  0003_instagram.sql  0004_ig_auto_publish.sql  0005_calibration_feedback.sql  0006_adaptive_strategy.sql  0007_exam_calendar.sql  (+1 more)
(+196 files in other folders)
