[project]
name = "exambro-backend"
version = "0.1.0"
description = "ExamBro IG Automation — FastAPI orchestrator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "supabase>=2.5",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    "apscheduler>=3.10",
    "resend>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: `Depends(...)` in argument defaults is idiomatic FastAPI
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
